GPP-498 Get tag translations.